fixed eventid is null
