# config/routes.ts
@@ -87,6 +87,37 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "FootballScore": {
+        "dataType": "refObject",
+        "properties": {
+            "teamA_score": {"dataType":"double","required":true},
+            "teamB_score": {"dataType":"double","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "EventCatagories": {
+        "dataType": "refEnum",
+        "enums": ["Cricket","Football","Squash_men","Chess","Squash_women","Tennis_women","Tennis_men","Athletics"],
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "AllEvents": {
+        "dataType": "refObject",
+        "properties": {
+            "_id": {"dataType":"string"},
+            "title": {"dataType":"string","required":true},
+            "event": {"ref":"EventCatagories","required":true},
+            "isStarted": {"dataType":"boolean","required":true},
+            "startTime": {"dataType":"double","required":true},
+            "endTime": {"dataType":"double","required":true},
+            "teams": {"dataType":"array","array":{"dataType":"string"},"required":true},
+            "roomID": {"ref":"EventCatagories","required":true},
+            "score": {"ref":"FootballScore","required":true},
+            "winner": {"dataType":"string"},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "FootballScoreUpdateRequest": {
         "dataType": "refObject",
         "properties": {
